manifests/frontend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forntend-deployment
  labels:
    app: frontend
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend #this should be matched with the container labels
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: 654654515013.dkr.ecr.ap-south-1.amazonaws.com/frontend:31
        imagePullPolicy: Always
        ports:
        - name: frontend-port
          containerPort: 5000
        resources:
          limits:
            memory: 100Mi
            cpu: 100m
          requests:
            memory: 100Mi
            cpu: 100m
