manifests/frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  type: NodePort
  selector:
    app: frontend # this should match with deployment labels 
  ports:
  - port: 80 # svc will expose on this port
    targetPort: 5000 # this is the container port
